ajustes no index e adicionar readme

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="ds-header-inner">
         <!-- logo -->
         <a href="index.html" class="ds-logo">
-          <span>I</span>Igor Cedro
+          <span>I</span>Igor
         </a>
         <!-- logo -->
         <!-- social -->
@@ -58,7 +58,7 @@
           <section>
             <h1>
               <span>Olá</span>
-              Me chamo Igor Cedro <br> DevOps com ênfase no Dev e entusiasta da tecnlogia
+              Me chamo Igor <br> DevOps com ênfase no Dev e entusiasta da tecnlogia
             </h1>
             <ul class="ds-numbervalulist">
               <li>
@@ -206,7 +206,7 @@
         <span>Stay in touch</span>
         <h4>Pronto para conversar?</h4>
         <p>Clique abaixo e vamos tomar um café virtual!</p>
-        <a href="mailto:igorcedrolb@gmail.com" class="ds-button">Vamos conversar</a>
+        <a href="https://linkedin.com/in/igorcedro" target="_blank" class="ds-button">Vamos conversar</a>
       </section>
       <span class="ds-copyright">© 2024. Template by <a href="https://designstub.com/"
           target="_blank">Designstub</a>.</span>
